# leopold

./: README.md  env.yml  evaluate.py  leopold.py  md.py  mdCommittee.py  setup.cfg  standard_config.yaml  train.py  utils.py
data/F-doped_TiO2/: train.xyz
jax_md/: energy.py  nn.py
jax_md/_nn/: nequip_pol.py  util.py
models/: MgO.pkl  TiO2+F.pkl  TiO2.pkl
notebooks/: relax.ipynb
polDy/: MD_mgo.py  preprocess.py  preprocess_mgo.py  setup_mgo.py  train_mgo.py
polDy/params/: params_mgo.pkl
poldyn_scripts/: preprocess_mgo.py  setup_mgo.py  utils.py
scripts/: POSCAR_writer.py  analysis.py  get_magmom.py  hop_extraction.py  job
src/leopold/: leopold.py  utils.py
src/scripts/: evaluate.py  md.py  train.py
