[metadata]
name             = leopold
version          = attr: leopold.__version__
author           = Luca Leoni
author_email     = luca.leoni12@unibo.it
description      = LEarning Of small POLaron Dynamic
long_description = file: README.md
keywords         = molecular dynamics, machine learning, polarons

[options]
python_requires  = >=3.10
install_requires = 
  jax 
  jax-md @ git+https://github.com/jax-md/jax-md
  optax
  flax
  h5py
  ase
  PyYAML
  tables

[options.packages.find]
where=src
