[metadata]
name             = leopold
version          = attr: leopold.__version__
author           = Luca Leoni
author_email     = luca.leoni12@unibo.it
description      = LEarning Of small POLaron Dynamic
long_description = file: README.md
keywords         = molecular dynamics, machine learning, polarons

[options]
python_requires  = >=3.10
install_requires = 
  numpy  == 1.26.4
  jax    == 0.4.24
  jaxlib == 0.4.24
  jax-md @ git+https://github.com/jax-md/jax-md
  optax
  flax
  h5py
  ase
  PyYAML
  tables

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    leopold-train = scripts.train:main
    leopold-eval  = scripts.evaluate:main
    leopold-md    = scripts.md:main
